--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
     min-width: 1550px;
     max-width: 1000000000000px;
     height: 1339px;
+    
 }
 #nu{
     text-decoration: none;
@@ -37,29 +38,28 @@ body{
     height:100px;
 }
 hr{
-    
     margin: 5px;
     padding: 0px;
-    
     color: hsl(0, 0%, 81%);
 }
 .navbar{
     position: relative;
-    
     display:flex;
     justify-content: center;
-    background-color: hsl(208, 100%, 87%);
+    background-color: hsl(0, 0%, 0%);
 }
 #Beboph1 h1{
+    color: black;
     text-align: center;
     font-size: 70px;
     margin: 0;
     padding: 0;
-    background-color: hsl(208, 100%, 70%);
+    background-color: hsl(0, 0%, 0%);
+    -webkit-text-stroke: 3px gold;
 }
 .navbar ul{
-    background-color: hsl(208, 100%, 87%);
-    transform: translateX(-85px);
+    background-color: hsl(0, 0%, 0%);
+    
     list-style-type: none;  
     margin: 0px;
     padding: 0px;
@@ -67,25 +67,26 @@ hr{
     
 }
 .navbar a{
-    color:rgb(0, 0, 0);
+    color:gold;
     text-decoration: none;
     padding: 15px;
     display: block;
     text-align: center;
     margin: 0px;
+    background-color: black;
 }
 .navbar a:hover{
-    background-color: hsl(208, 100%, 81%);
-    box-shadow: 0px 0px 5px hsl(0, 0%, 100%);
-    transition: ease-in 0.2s;
+    background-color: hsl(51, 42%, 50%);
+    transition: ease-in 0.25s;
     transition: linear-gradient(to right, hsl(0, 0%, 100%), hsl(0, 0%, 80%) );   
 }
 .navbar li{
     float: left;   
 }
 main{
-    margin: 15px;
-    
+    margin: 0px;
+    margin-top:0px;
+    padding-top: 15px;
 }
 .box{
     width: 500px;
@@ -202,6 +203,7 @@ main{
     margin-top: 30%;
     margin: 10px;
     
+    
 }
 #Muusiker{
     margin-left:auto;
@@ -212,7 +214,8 @@ main{
     width: 600px;
     margin-right: auto;
     margin-left: auto;
-    background-color: hsl(208, 100%, 87%);
     padding: 7px ;
+    font-size: 30px;
 }
+
 
